--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 
 		<h2>Load User Database</h2>
 		<div>
-  			<label for="fname">URL to file</label><br>
+  			<label for="fname">File URL</label><br>
   			<input type="text" id="filePath" name="filePath" value="leave empty to load predefined file"><br>
 		    <button id= "button1" class="buttonPath" name="buttonPath" type="submit" value="Import">Import</button>
 		    <label id="loadingLabel"></label>
